Updated POM files so local environment using JUnit5 with Java Compiler 8 stills works.